fix homepage spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -329,7 +329,7 @@ a {
 
 @media (min-width: 400px) {
 	.homepage-title {
-		width: 14em;
+		width: 12em;
 		height: 4em;
 	}
 
@@ -341,10 +341,6 @@ a {
 }
 
 @media (min-width: 800px) {
-	.homepage-title {
-		width: 12em;
-	}
-	
 	.homepage-description{
 		width: 56em;
 	}
